force-app/main/default/objects/Partner_Revenue_Dispute__c/Partner_Revenue_Dispute__c.object-meta.xml
<CustomObject>
    <label>Partner Revenue Dispute</label>
    <pluralLabel>Partner Revenue Disputes</pluralLabel>
    <nameField>
        <displayFormat>PRD-{00000000}</displayFormat>
        <label>Partner Revenue Dispute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>