force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Revenue Disputes</relationshipLabel>
    <relationshipName>Assigned_Revenue_Disputes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>