force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Revenue Disputes</relationshipLabel>
    <relationshipName>Revenue_Disputes2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>