force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
    <required>true</required>
</CustomField>