force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Dispute_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Type__c</fullName>
    <label>Dispute Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Revenue</fullName>
                <default>true</default>
                <label>Missing Revenue</label>
            </value>
            <value>
                <fullName>Incorrect Attribution</fullName>
            </value>
            <value>
                <fullName>Incorrect Percentage</fullName>
            </value>
            <value>
                <fullName>Incorrect Incentive</fullName>
            </value>
            <value>
                <fullName>Missing Payment</fullName>
            </value>
            <value>
                <fullName>Incorrect Payment</fullName>
            </value>
            <value>
                <fullName>Partner Ownership</fullName>
            </value>
            <value>
                <fullName>Protection Dispute</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>