force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive</label>
    <type>Lookup</type>
    <referenceTo>Partner_Incentive__c</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Disputes3</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>