force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Requested_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Requested_Adjustment__c</fullName>
    <label>Requested Adjustment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>