force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>