force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resolved Revenue Disputes</relationshipLabel>
    <relationshipName>Resolved_Revenue_Disputes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>