force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <type>Lookup</type>
    <referenceTo>Deal_Revenue__c</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Disputes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>