force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Revenue_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Attribution__c</fullName>
    <label>Revenue Attribution</label>
    <type>Lookup</type>
    <referenceTo>Deal_Revenue_Attribution__c</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Disputes2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>