force-app/main/default/objects/Partner_Revenue_Dispute__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>